# vim-code-runner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: ci.yml
autoload/: coderunner.vim
plugin/: coderunner.vim
python/: pyproject.toml
python/coderunner/: TRunnerContext.py  __init__.py  decorators.py  run.py
python/coderunner/runners/: TCppRunner.py  TPythonRunner.py  TRunnerContext.py  __init__.py  interface.py
python/src/coderunner/: __init__.py  coderunner.py
python/src/command_builder/: __init__.py  interface.py  interpolator.py  shebang_command_builder.py
python/src/command_builders_dispatcher/: __init__.py  file_ext_command_builders_dispatcher.py  file_type_command_builders_dispatcher.py  interface.py  shebang_command_builders_dispatcher.py
python/src/command_dispatcher_strategy_selector/: basic.py
python/src/commands_executor/: inteface.py  vim_commands_executor.py
python/src/config_manager/: __init__.py  interface.py  vim_config_manager.py
python/src/editor/: interface.py  vim_editor.py
python/src/editor_service_for_coderunner/: basic.py
python/src/file_info_extractor/: __init__.py  basic.py  fetch_linguist_extensions.py  interface.py
python/src/message_printer/: __init__.py  interface.py  vim_message_printer.py
python/src/project_info_extractor/: __init__.py  interface.py  vim_project_info_extractor.py
python/test/unit/: conftest.py
python/test/unit/command_builders_dispatcher/: test_file_ext_command_builders_dispatcher.py  test_file_type_command_builders_dispatcher.py  test_shebang_command_builders_dispatcher.py
python/test/unit/file_info_extractor/: test_interface_file_info_extractor.py
python/test/unit/test_command_dispatcher_strategy_selector/: test_basic_command_dispatcher_strategy_selector.py
python/tests/unit/: conftest.py
python/tests/unit/command_builder/: conftest.py  test_interpolator.py
python/tests/unit/command_builders_dispatcher/: test_glob_command_builders_dispatcher.py  test_shebang_command_builders_dispatcher.py
python/tests/unit/config_manager/: test_interface_config_manager.py
python/tests/unit/file_info_extractor/: conftest.py  test_basic.py  test_interface.py  test_interface_file_info_extractor.py
python/tests/unit/project_info_extractor/: conftest.py  test_interface_project_info_extractor.py
python_coderunner/: __init__.py  pyproject.toml
python_coderunner/coderunner/: metaclasses.py
python_coderunner/coderunner/runners/: TCppRunner.py  TPythonRunner.py  TRunnerContext.py  __init__.py
python_coderunner/src/coderunner/: __init__.py  coderunner.py
python_coderunner/src/coderunner_builder/: __init__.py  interface.py  vim_coderunner_builder.py
python_coderunner/src/coderunner_factory/: __init__.py  interface.py  vim_coderunner_factory.py
python_coderunner/src/command_builder/: __init__.py  concatenator_command_builder.py  interface.py  interpolator_command_builder.py
python_coderunner/src/command_builders_dispatcher/: __init__.py  file_ext_command_builders_dispatcher.py  file_type_command_builders_dispatcher.py  glob_command_builders_dispatcher.py  interface.py  shebang_command_builders_dispatcher.py
python_coderunner/src/command_dispatcher_strategy_selector/: __init__.py  basic.py  types.py
python_coderunner/src/commands_executor/: __init__.py  interface.py  vim_commands_executor.py
python_coderunner/src/config/: __init__.py  basic.py  config_field.py  exceptions.py  interface.py  vim_config.py
python_coderunner/src/config/getter/: __init__.py  exceptions.py  interface.py  vim_config_value_getter.py
python_coderunner/src/config/validator/: __init__.py  bool_validator.py  dispatchers_order_validator.py  dispatchers_validator.py  exceptions.py  interface.py  str_validator.py
python_coderunner/src/config_manager/: __init__.py  basic.py  config_field.py  exceptions.py  interface.py  vim_config_manager.py
python_coderunner/src/editor/: __init__.py  interface.py  vim_editor.py
python_coderunner/src/editor_service_for_coderunner/: __init__.py  basic.py
python_coderunner/src/file_info_extractor/: __init__.py  base.py  interface.py  vim_file_info_extractor.py
python_coderunner/src/message_printer/: __init__.py  vim_message_printer.py
python_coderunner/src/project_info_extractor/: __init__.py  base.py  interface.py  vim_project_info_extractor.py
python_coderunner/src/validators/: __init__.py  dispatchers_order_validator.py  exceptions.py  interface.py
python_coderunner/tests/unit/: conftest.py
python_coderunner/tests/unit/command_builder/: test_interpolator_command_builder.py
python_coderunner/tests/unit/command_builders_dispatcher/: test_file_ext_command_builders_dispatcher.py  test_file_type_command_builders_dispatcher.py  test_glob_command_builders_dispatcher.py  test_shebang_command_builders_dispatcher.py
python_coderunner/tests/unit/command_dispatcher_strategy_selector/: test_basic_command_dispatcher_strategy_selector.py
python_coderunner/tests/unit/config/: test_validator.py
python_coderunner/tests/unit/config_manager/: test_basic_config_validator.py  test_interface_config_manager.py
python_coderunner/tests/unit/file_info_extractor/: test_interface_file_info_extractor.py
python_coderunner/tests/unit/project_info_extractor/: test_interface_project_info_extractor.py
python_coderunner/typings/: vim.pyi
