[project]
name = "vim-code-runner"
version = "0.1.0"
requires-python = ">=3.5"
dependencies = [
    "isort>=4.3.21",
    "mypy>=0.910",
    "pylint>=2.6.2",
    "pytest>=6.1.2",
    "pyyaml>=5.4.1",
    "requests>=2.27.1",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = [
    "attr-defined",
    "import-untyped",
    "union-attr",
]

[tool.ruff]
line-length = 120
ignore = [
    "E501", # ignore line length
]
[tool.ruff.format]
quote-style = "double"
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused imports
