[project]
name = "vim-code-runner"
authors = [
  {name = "Zahar Chernenko", email = "zaharchernenko35@gmail.com"},
]
version = "1.0.4"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "commitlint>=1.3.0",
    "pre-commit>=1.21.0",
    "pylint>=2.6.2",
    "pyright>=1.1.411",
    "pytest>=6.1.2,<8.0.0",
    "pytest-lazy-fixture>=0.6.3",
    "pytest-mock>=3.5.1",
    "ruff>=0.12.0",
]
pre-commit = [
    "pre-commit>=1.21.0",
    "pylint>=2.6.2",
    "pyright>=1.1.411",
    "ruff>=0.12.0",
]
test = [
    "pytest>=6.1.2,<8.0.0",
    "pytest-lazy-fixture>=0.6.3",
    "pytest-mock>=3.5.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]  # to run without python -m, otherwise there will be no src in the path
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingModuleSource = false
reportMissingParameterType = true
reportMissingTypeArgument = true
stubPath = "typings"
[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingImports = false

[tool.ruff]
line-length = 120
[tool.ruff.lint]
extend-select = ["D213", "D415", "I"]
extend-unsafe-fixes = ["F401"]
ignore = ["W292"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "F401" ]  # Ignore unused imports.
"conftest.py" = [ "E402", "F401", "F811" ]
[tool.ruff.format]
quote-style = "double"

[tool.pylint]
[tool.pylint.main]
ignore-paths = ["^tests/unit/", "^.venv/"]
init-hook = """
import os, sys
cur_dir = os.getcwd()
sys.path.append(cur_dir)
"""
[tool.pylint.format]
max-line-length = 120
[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "trailing-newlines",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "raise-missing-from",
    "line-too-long",
]
ignored-modules = ["vim"]
[tool.pylint.variables]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-rgx="^(((I|T|E)[A-Z][a-zA-Z0-9]*)|([A-Z][a-zA-Z0-9]*(Error|Protocol)))$"
const-naming-style= "any"
function-naming-style = "snake_case"
typealias-rgx="^(((I|T|E)[A-Z][a-zA-Z0-9]*)|([A-Z][a-zA-Z0-9]*(Error|Protocol)))$"
typevar-rgx="^[A-Z][a-zA-Z0-9]*Type(_co|_contra)?$"
variable-naming-style = "snake_case"
module-naming-style = "snake_case"
inlinevar-naming-style = "any"
